--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.3'
     implementation 'com.google.code.gson:gson:2.9.0'
