--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -70,7 +70,17 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/combined_status_widget_info" />
         </receiver>
-
+        <receiver
+            android:name=".MoscowTimeWidget"
+            android:exported="false"
+            android:label="@string/moscow_time_widget_label">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/moscow_time_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
